--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Welcome to Component Library of Ravi Sadariya</h1>
-    <p>I am attending neog.camp and I want to make a library which would make all my projects look good and consistent.</p>
+    <p>I am attending neog.camp and I want to make a library which would make all my projects look good and consistent.
+    </p>
 
     <hr>
 
@@ -68,7 +71,7 @@
         <div> I am Ravi</div>
         <ul>
             <li>
-                <a href ="/">Home </a>
+                <a href="/">Home </a>
             </li>
             <li>
                 <a href="/"> Product</a>
@@ -85,12 +88,40 @@
     <h2> Header </h2>
     <header>
         <img src="Images/Hero.svg">
+        <img
+            src="https://images.unsplash.com/photo-1552308995-2baac1ad5490?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=750&q=80">
         <h1>Heading inside Hero</h1>
 
 
 
     </header>
 
+    <hr>
+    <h2> @section</h2>
+    <section>
+        <h3> white section</h3>
+        <p>This will have white background</p>
+    </section>
+
+    <section>
+        <h3> off white section</h3>
+        <p>This will have gray background</p>
+    </section>
+
+    <hr>
+
+    <h2>@footer</h2>
+    <footer>
+        <div> Some Small heading inside footer</div>
+        <ul>
+            <li> SocialOne</li>
+            <li> SocialTwo</li>
+            <li>SocialThree</li>
+        </ul>
+    </footer>
+
+
 
 </body>
+
 </html>
