--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Component Library</title>
+    <link href="style.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -20,8 +22,12 @@
     <h1>This is the biggest heading</h1>
     <h2>This is the second biggest</h2>
     <p> let me show you the normal text. </p>
+    <p> THis paragraph will have a <strong>Bold</strong> text </p>
     <small>This is relatively smaller text.</small>
 
+
+    <hr>
+    
     <h2> @containers</h2>
 
     <h3> fluid container</h3>
