--- a/index.html
+++ b/index.html
@@ -27,14 +27,15 @@
 
 
     <hr>
-    
+
     <h2> @containers</h2>
 
     <h3> fluid container</h3>
-    <div>This is a fluid container and it will go till the end of the page</div>
+
+    <div class="container-fluid">This is a fluid container and it will go till the end of the page</div>
 
     <h3> center container</h3>
-    <div>This is a fluid container and it will go till the end of the page</div>
+    <div class="container container-center">This is a fluid container and it will go till the end of the page</div>
 
     <h2>@links</h2>
 
