--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 
     <h2>@links</h2>
 
-    <a href="https://google.com"> Its a Primary Link</a>
-    <a href="https://google.com"> Its a Secondary Link</a>
+    <a class="link link-primary" href="/"> Its a Primary Link</a>
+
+    <a class="link link-secondary" href="https://google.com"> Its a Secondary Link</a>
 
 
     <hr>
@@ -48,8 +49,9 @@
     <h2> @list</h2>
 
     <h3> unordered list</h3>
+    <p>This list will not have bullet</p>
 
-    <ul>
+    <ul class="list-non-bullet">
         <li> item one</li>
         <li> item two</li>
         <li> item three</li>
@@ -57,10 +59,10 @@
     </ul>
 
     <h3> unordered inline list</h3>
-    <ul>
-        <li> Inline Item One</li>
-        <li> Inline Item Two</li>
-        <li> Inline Item Three</li>
+    <ul class="list-non-bullet">
+        <li class="list-item-inline"> Inline Item One</li>
+        <li class="list-item-inline"> Inline Item Two</li>
+        <li class="list-item-inline"> Inline Item Three</li>
     </ul>
 
     <h3> reverse Ordered list</h3>
@@ -74,17 +76,18 @@
     <hr>
 
     <h2>@nav</h2>
-    <nav>
-        <div> I am Ravi</div>
-        <ul>
-            <li>
-                <a href="/">Home </a>
+    <nav class="navigation container">
+        
+        <div class="nav-brand"> I am Ravi</div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-item-inline">
+                <a class=" link link-active " href="/"> Home </a>
             </li>
-            <li>
-                <a href="/"> Product</a>
+            <li class="list-item-inline">
+                <a class="link " href="/"> Product</a>
             </li>
-            <li>
-                <a href="/"> About</a>
+            <li class="list-item-inline">
+                <a class="link " href="/"> About</a>
             </li>
         </ul>
     </nav>
@@ -93,11 +96,9 @@
     <hr>
 
     <h2> Header </h2>
-    <header>
-        <img src="Images/Hero.svg">
-        <img
-            src="https://images.unsplash.com/photo-1552308995-2baac1ad5490?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=750&q=80">
-        <h1>Heading inside Hero</h1>
+    <header class="hero">
+        <img class= "hero-img" src="Images/Hero.svg">
+        <h1 class="hero-heading">Heading inside Hero</h1>
 
 
 
