--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <h2> Header </h2>
     <header class="hero">
         <img class= "hero-img" src="Images/Hero.svg">
-        <h1 class="hero-heading">Heading inside Hero</h1>
+        <h1 class="hero-heading"><center>Heading inside <span style="color:var(--primary-color);"> Hero </span> </center></h1>
 
 
 
