--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <h2>@nav</h2>
     <nav class="navigation container">
-        
+
         <div class="nav-brand"> I am Ravi</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
@@ -97,8 +97,10 @@
 
     <h2> Header </h2>
     <header class="hero">
-        <img class= "hero-img" src="Images/Hero.svg">
-        <h1 class="hero-heading"><center>Heading inside <span style="color:var(--primary-color);"> Hero </span> </center></h1>
+        <img class="hero-img" src="Images/Hero.svg">
+        <h1 class="hero-heading">
+            <center>Heading inside <span style="color:var(--primary-color);"> Hero </span> </center>
+        </h1>
 
 
 
@@ -109,8 +111,14 @@
     <section class="section">
         <div class="container container-center">
             <h1> white section</h1>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p> </div>
-        
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
+                into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
+                release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing
+                software like Aldus PageMaker including versions of Lorem Ipsum</p>
+        </div>
+
     </section>
 
     <section class="section ow">
@@ -121,12 +129,18 @@
     <hr>
 
     <h2>@footer</h2>
-    <footer>
-        <div> Some Small heading inside footer</div>
-        <ul>
-            <li> SocialOne</li>
-            <li> SocialTwo</li>
-            <li>SocialThree</li>
+    <footer class="footer">
+        <div class="footer-header"> Some Small heading inside footer</div>
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline">
+                <a class="link" href="/">SocialOne</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/">SocialTwo</a>
+            </li>
+            <li class="list-item-inline"> 
+                <a class="link" href="/">SocialThree</a>
+            </li>
         </ul>
     </footer>
 
