--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | Adarsh Balika</title>
+    <title>Projects | Adarsh Balika</title>
     <link href="style.css" rel="stylesheet">
 </head>
 
@@ -15,10 +15,10 @@
         <div class="nav-brand"> I am Developer</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
-                <a class=" link link-active " href="/"> Home </a>
+                <a class=" link  " href="/"> Home </a>
             </li>
             <li class="list-item-inline">
-                <a class="link " href="projects.html"> Projects</a>
+                <a class="link link-active" href="projects.html"> Projects</a>
             </li>
             <li class="list-item-inline">
                 <a class="link " href="blogs.html"> Blogs</a>
@@ -27,14 +27,40 @@
     </nav>
 
     <header class="hero">
-        <img class="hero-img" src="/Images/Hero.svg">
-        <h1 class="hero-heading">
-            <center>Heading inside <span style="color:var(--primary-color);"> Hero </span> </center>
-        </h1>
+        
+        <h1 class="hero-heading"> see my <span class="heading-inverted"> code</span></h1> 
     </header>
 
+    <ul class="list-non-bullet">
+
+        <li>
+            <div class="container container-center">
+                <h1>Marvel Fan?</h1>
+            <small> Nov, 2020</small>
+            <p> A CLI app built with <strong> NodeJS</strong>. You can send this to your friends and find out who really knows you</p>
+
+            <a class="link link-primary" href="https:/repl.it/@tanaypratap"> Live Projects</a>
+            <a class="link link-secondary" href="https:/github.com/tanaypratap/the-project-repo"> View Source code</a>
+            </div>
+            
+        </li>
+
+        <li>
+            <div class="container container-center ">
+                <h1>how well do you know me?</h1>
+            <small> Nov, 2020</small>
+            <p> A CLI app built with <strong> NodeJS</strong>. You can send this to your friends and find out who really knows you</p>
+
+            <a class="link link-primary" href="https:/repl.it/@tanaypratap"> Live Projects</a>
+            <a class="link link-secondary" href="https:/github.com/tanaypratap/the-project-repo"> View Source code</a>
+            </div>
+        </li>
+    </ul>
+
+
+
     <section class="section ow">
-        <div class="container container-center">
+        <div class="container container-center ">
             <h1> Technologies</h1>
             <p>I am familiar with HTML, CSS, Git, Javascript, NodeJS and I am working on making a website.</p>
         </div>
